Deleted Contact page. Revised About content.

--- a/about.html
+++ b/about.html
@@ -30,7 +30,9 @@
 		<img src="images\about\myself.jpg" style="width:230px; height:335px;" alt="Myself"/>
 		
 		<div id="bio">	
-			<p>Dating back to 2010 during his second year in high school, Weny&uuml Zhang began to set foot in the industry of visual effects. Having been intrigued by graphics design and video editting, he then taught himself industry-level 3D animation packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> with a major in Digital Media Arts. Later on, he came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a> (Boiler Up!) to start a brand new journey in the field of computer graphics in the US. He believes that as an artist and technologist, creating something elegant and impressive is always his ultimate pursuit. </p>
+			<p>Weny&uuml is a technical artist currently working in the industry of simulation. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> with a major in Digital Media Arts. Later on, he came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a> (<i>Boiler Up!</i>) to start a brand new journey in the field of computer graphics in the US.</p>
+			<p>In his spare time, he does photography, Chinese calligraphy and plays piano. Also, he is teaching himself Spanish (<i>¡Hola!</i>). </p>
+			<p>As an artist and technologist, creating something elegant and impressive is always his ultimate pursuit.</p>
 				
 			<div id="resume-icon">
 				<img src="images/about/pdf_icon.png" width="30" height="30" alt="PDF"/>
