--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
+	
 <head>
 	<title>Weny&uuml Zhang | Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -18,32 +19,32 @@
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	      <li><a href="about.html">ABOUT</a></li>
-	      <li><a href="contact.html">CONTACT</a></li>       
+		  <li><a href="blog.html">BLOG</a></li>
+	      <li><a href="about.html">ABOUT</a></li>  
 		</nav>   
 	</div>
 
-<div class="container">
+	<div class="container">
 
-	<div class="about">
-		
-		<img src="images\about\myself.jpg" style="width:230px; height:335px;" alt="Myself"/>
-		
-		<div id="bio">	
-			<p>Weny&uuml is a technical artist currently working in the industry of simulation. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> with a major in Digital Media Arts. Later on, he came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a> (<i>Boiler Up!</i>) to start a brand new journey in the field of computer graphics in the US.</p>
-			<p>In his spare time, he does photography, Chinese calligraphy and plays piano. Also, he is teaching himself Spanish (<i>¡Hola!</i>). </p>
-			<p>As an artist and technologist, creating something elegant and impressive is always his ultimate pursuit.</p>
-				
-			<div id="resume-icon">
-				<img src="images/about/pdf_icon.png" width="30" height="30" alt="PDF"/>
-			</div>
-			<div id="resume-link">
-				<a href="https://drive.google.com/open?id=1zm65_SEOcirNaXf6tDqAF_DqzsOn8bL_" target="_blank">Resume</a>
+		<div class="about">		
+			<img src="images\about\myself.jpg" style="width:230px; height:335px;" alt="Myself"/>
+
+			<div id="bio">	
+				<p>Weny&uuml is a technical artist currently working in the industry of simulation. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> with a major in Digital Media Arts. Later on, he came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a> (<i>Boiler Up!</i>) to start a brand new journey in the field of computer graphics in the US.</p>
+				<p>In his spare time, he does photography, Chinese calligraphy and plays piano. Also, he is teaching himself Spanish (<i>¡Hola!</i>). </p>
+				<p>As an artist and technologist, creating something elegant and impressive is always his ultimate pursuit.</p>
+
+				<div id="resume-icon">
+					<img src="images/about/pdf_icon.png" width="30" height="30" alt="PDF"/>
+				</div>
+
+				<div id="resume-link">
+					<a href="https://drive.google.com/open?id=1zm65_SEOcirNaXf6tDqAF_DqzsOn8bL_" target="_blank">Resume</a>
+				</div>
 			</div>
 		</div>
-	</div>
 
-</div>
+	</div>
 	
 	<footer>
 		<p>&copy;2020 Weny&uuml Zhang | All Rights Reserved</p>
@@ -53,7 +54,8 @@
 			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
 			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-		</div> 
+		</div>
+		
 	</footer>
 
 </body>
