--- a/art.html
+++ b/art.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -20,8 +19,8 @@
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
+		  <li><a href="blog.html">BLOG</a></li>
 	      <li><a href="about.html">ABOUT</a></li>
-	      <li><a href="contact.html">CONTACT</a></li>       
 		</nav>   
 	</div>
 
