--- a/programming.html
+++ b/programming.html
@@ -18,6 +18,7 @@
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
+		  <li><a href="blog.html">BLOG</a></li>
 	      <li><a href="about.html">ABOUT</a></li>     
 		</nav>   
 	</div>
