add content to Blog page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
 	<title>Weny&uuml Zhang | Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -14,20 +15,53 @@
 	<div class="banner">
 		<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
 
-		<nav>
+		<nav>   
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
 		  <li><a href="blog.html">BLOG</a></li>
-	      <li><a href="about.html">ABOUT</a></li>     
+	      <li><a href="about.html">ABOUT</a></li>
 		</nav>   
-	</div>	
+	</div>
 
 	<div class="container">
-		<div class="works-container">
-			<iframe src="https://player.vimeo.com/video/305556988?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+		<div class="works-cover">
+			<div class="works-title-cover">
+				<a href="works_go.html"><img src="images\art\cover\work_go.png"/>
+				<div class="works-title"><p>Crowd Animation Perception Research</p></div></a>
+			</div>				
+			<div class="works-title-cover">
+				<a href="works_cs.html"><img src="images\art\cover\cs_01.png"/>
+				<div class="works-title"><p>Cyber Security Visualization</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_as.html"><img src="images\art\cover\work_as.png"/>
+				<div class="works-title"><p>Amber Spider</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_pl.html"><img src="images\art\cover\pl_.png"/>
+				<div class="works-title"><p>Procedual Road Experiment</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_ho.html"><img src="images\art\cover\work_ho.jpg"/>
+				<div class="works-title"><p>Large-scale Environment Design<br/><br/>(WIP)</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_vg.html"><img src="images\art\cover\work_vg.jpg"/>
+				<div class="works-title"><p>VIRTUAL GAME</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_au.html"><img src="images\art\cover\work_au.jpg"/>
+				<div class="works-title"><p>Audi R8</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_lb.html"><img src="images\art\cover\work_lb.jpg"/>
+				<div class="works-title"><p>Laubwerk Plant Kit Test</p></div></a>
+			</div>
+						
 		</div>
+	
 	</div>
 
 	<footer>
@@ -38,9 +72,8 @@
 			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
 			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-		</div>
+		</div> 
 	</footer>
 
 </body>
-
 </html>
