--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
+	
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+	<title>Weny&uuml Zhang | Portfolio</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="shortcut icon" href="images/avatar.jpg" />
+	<link href="css/master.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+
+	<div class="banner">
+		<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
+
+		<nav> 
+	      <li><a href="art.html">ART</a></li>
+	      <li><a href="programming.html">PROGRAMMING</a></li>
+	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
+		  <li><a href="blog.html">BLOG</a></li>
+	      <li><a href="about.html">ABOUT</a></li>  
+		</nav>   
+	</div>
+
+	<div class="container">
+
+		<div class="blog">	
+
+			<div id="podcast">	
+				<p>留学的艺术</p>
+			</div>
+		</div>
+
+	</div>
+	
+	<footer>
+		<p>&copy;2020 Weny&uuml Zhang | All Rights Reserved</p>
+		
+		<div class="icons">		
+			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
+			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+		</div>
+		
+	</footer>
+
 </body>
 </html>
