Change Index page same as Art.html

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div class="banner">
-		<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
+		<a href="http://www.wenyuzhang.com/art.html"><img src="images\banner\banner_new.png" class="title"/></a>
 
 		<nav> 
 	      <li><a href="art.html">ART</a></li>
@@ -43,8 +43,7 @@
 			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
 			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-		</div>
-		
+		</div>		
 	</footer>
 
 </body>
