--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div class="banner">
-		<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
+		<a href="http://www.wenyuzhang.com/art.html"><img src="images\banner\banner_new.png" class="title"/></a>
 
 		<nav>   
 	      <li><a href="art.html">ART</a></li>
@@ -58,10 +58,8 @@
 			<div class="works-title-cover">
 				<a href="works_lb.html"><img src="images\art\cover\work_lb.jpg"/>
 				<div class="works-title"><p>Laubwerk Plant Kit Test</p></div></a>
-			</div>
-						
-		</div>
-	
+			</div>						
+		</div>	
 	</div>
 
 	<footer>
