--- a/works_go.html
+++ b/works_go.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="banner">
-        <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
+        <a href="http://www.wenyuzhang.com/art.html"><img src="images\banner\banner_new.png" class="title"/></a>
         <nav>
 		   <li><a href="art.html">ART</a></li>
 		   <li><a href="programming.html">PROGRAMMING</a></li>
