--- a/works_au.html
+++ b/works_au.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="banner">
-	<img src="images\banner\banner_new.png" class="title"/>
+	<a href="http://www.wenyuzhang.com/art.html"><img src="images\banner\banner_new.png" class="title"/></a>
     <nav>
 	   <li><a href="art.html">ART</a></li>
 	   <li><a href="programming.html">PROGRAMMING</a></li>
