--- a/works_ca.html
+++ b/works_ca.html
@@ -12,7 +12,7 @@
 
 
   <div class="banner">
-    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
+    <a href="http://www.wenyuzhang.com/art.html"><img src="images\banner\banner_new.png" class="title"/></a>
 
      <nav>
 	   <li><a href="art.html">ART</a></li>
