--- a/works_sh.html
+++ b/works_sh.html
@@ -11,30 +11,28 @@
 
 <body>
 
-<div class="banner">
-    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
-    <nav>
-	   <li><a href="art.html">ART</a></li>
-	   <li><a href="programming.html">PROGRAMMING</a></li>
-	   <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	   <li><a href="blog.html">BLOG</a></li>
-	   <li><a href="about.html">ABOUT</a></li>    
-	</nav>  
-</div>
+	<div class="banner">
+		<a href="http://www.wenyuzhang.com/art.html"><img src="images\banner\banner_new.png" class="title"/></a>
+		<nav>
+		   <li><a href="art.html">ART</a></li>
+		   <li><a href="programming.html">PROGRAMMING</a></li>
+		   <li><a href="photo.html">PHOTOGRAPHY</a></li>
+		   <li><a href="blog.html">BLOG</a></li>
+		   <li><a href="about.html">ABOUT</a></li>    
+		</nav>  
+	</div>
 
-<div class="container">
+	<div class="container">
 
-	<div class="works-container">
-    
-    <iframe src="https://player.vimeo.com/video/312995720?title=0&byline=0&portrait=0" width="900" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <br/><br/>
-    <p>A hologram style shader created by Unity Shader Graph.</p>
-  
-  </div>
+		<div class="works-container">
+			<iframe src="https://player.vimeo.com/video/312995720?title=0&byline=0&portrait=0" width="900" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<br/><br/>
+			<p>A hologram style shader created by Unity Shader Graph.</p>  
+ 	 	</div>
 
-</div>
+	</div>
 
-<footer>
+	<footer>
 		<p>&copy;2020 Weny&uuml Zhang | All Rights Reserved</p>
 		
 		<div class="icons">		
