revised about content. deleted contact email.

--- a/about.html
+++ b/about.html
@@ -40,8 +40,14 @@
 
 				<div id="resume-link">
 					<a href="https://drive.google.com/open?id=1zm65_SEOcirNaXf6tDqAF_DqzsOn8bL_" target="_blank">Resume</a>
+				</div>	
+				
+				<div id="email">
+					<p>Email: <a href="mailto:zhangwenyu7@gmail.com" target="_top">zhangwenyu7@gmail.com</a></p>
 				</div>
 			</div>
+			
+			
 		</div>
 
 	</div>
