--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-		  <li><a href="blog.html">BLOG</a></li>
 	      <li><a href="about.html">ABOUT</a></li>  
 		</nav>   
 	</div>
@@ -39,7 +38,7 @@
 				</div>
 
 				<div id="resume-link">
-					<a href="https://drive.google.com/open?id=1zm65_SEOcirNaXf6tDqAF_DqzsOn8bL_" target="_blank">Resume</a>
+					<a href="https://drive.google.com/file/d/1RI-Q2838TEIdVjlUNg1j2O8xo6V4Ha4Z/view?usp=share_link" target="_blank">Resume</a>
 				</div>	
 				
 				<div id="email">
@@ -53,12 +52,10 @@
 	</div>
 	
 	<footer>
-		<p>&copy;2020 Weny&uuml Zhang | All Rights Reserved</p>
+		<p>&copy;2023 Weny&uuml Zhang | All Rights Reserved</p>
 		
-		<div class="icons">		
-			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+		<div class="icons">					
 			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
 		</div>
 		
