--- a/art.html
+++ b/art.html
@@ -19,7 +19,6 @@
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-		  <li><a href="blog.html">BLOG</a></li>
 	      <li><a href="about.html">ABOUT</a></li>
 		</nav>   
 	</div>
@@ -45,7 +44,7 @@
 			</div>
 			<div class="works-title-cover">
 				<a href="works_ho.html"><img src="images\art\cover\work_ho.jpg"/>
-				<div class="works-title"><p>Large-scale Environment Design<br/><br/>(WIP)</p></div></a>
+				<div class="works-title"><p>Large-scale Environment Design</p></div></a>
 			</div>
 			<div class="works-title-cover">
 				<a href="works_vg.html"><img src="images\art\cover\work_vg.jpg"/>
@@ -65,12 +64,9 @@
 	</div>
 
 	<footer>
-		<p>&copy;2020 Weny&uuml Zhang | All Rights Reserved</p>
-		
+		<p>&copy;2023 Weny&uuml Zhang | All Rights Reserved</p>		
 		<div class="icons">		
-			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
 			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
 		</div> 
 	</footer>
