--- a/works_go.html
+++ b/works_go.html
@@ -31,8 +31,8 @@
       <iframe src="https://player.vimeo.com/video/367613352?title=0&byline=0&portrait=0" width="900" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <br/>
         <br/><br/>
-        <p>Here is two demo clips of my Master thesis research which is about perception of crowd animation. </p>
-        <p>The topic is <i>THE EFFECT OF AUDIENCE PERCEPTION ON DIFFERENT LOCOMOTIONS OF CROWD ANIMATION</i>. I used <a href="http://golaem.com/" target="_blank">Golaem</a>, a crowd animation plugin for Maya to make the demo videos.</p>
+        <p>Here is two demo clips of my <a href="https://link.springer.com/chapter/10.1007/978-3-030-95531-1_27" target="_blank">thesis</a> which is a study about the perception of crowd animation. </p>
+        <p>The topic is <i>The Effect of Characters’ Locomotion on Audience Perception of Crowd Animation</i>. I used <a href="http://golaem.com/" target="_blank">Golaem</a>, a crowd animation plugin for Maya to make the demo videos.</p>
         <p>In each scene, there are two identical characters. The methodology is to let audience watch the video and check how long they can identify the two identical models (if they can find). Then compare the time audience have spent on different scenarios. As a result, different locomotions of characters might affect audience's perception.</p>
 
       </div>
@@ -40,12 +40,10 @@
     </div>
 
     <footer>
-      <p>&copy;2020 Weny&uuml Zhang | All Rights Reserved</p>
+      <p>&copy;2023 Weny&uuml Zhang | All Rights Reserved</p>
       
       <div class="icons">		
-        <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
         <a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-        <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
         <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
       </div> 
     </footer>
