--- a/works_ho.html
+++ b/works_ho.html
@@ -18,7 +18,6 @@
 	   <li><a href="art.html">ART</a></li>
 	   <li><a href="programming.html">PROGRAMMING</a></li>
 	   <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	   <li><a href="blog.html">BLOG</a></li>
 	   <li><a href="about.html">ABOUT</a></li>   
 	</nav>     
 </div>
@@ -30,19 +29,17 @@
     	<img src="images\art\ho\ho_01.jpg" width="900px">
     	<img src="images\art\ho\ho_02.png" width="900px">
 	<br/><br/>    
-    <p>I'm trying to make some large-scale CG environment. The programs I used included Maya, Maya Bifrost, 
-    Houdini Ocean Toolkit and Speedtree. Rendered in V-Ray. Working in progress ...</p>
+    <p>I'm trying to make some large-scale CG environment. The programs I used include Maya, Maya Bifrost, 
+    Houdini Ocean Toolkit and Speedtree. Rendered in V-Ray.</p>
   	</div>
 
 </div>
 
 <footer>
-		<p>&copy;2020 Weny&uuml Zhang | All Rights Reserved</p>
+		<p>&copy;2023 Weny&uuml Zhang | All Rights Reserved</p>
 		
 		<div class="icons">		
-			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
 			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
 		</div> 
 	</footer>
