--- a/works_pl.html
+++ b/works_pl.html
@@ -38,16 +38,13 @@
 </div>
 
 <footer>
-  <p>&copy;2020 Wenyu Zhang | All Rights Reserved</p>
+  <p>&copy;2023 Weny&uuml Zhang | All Rights Reserved</p>
+
   <div class="icons">
-    <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-    <a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-    <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
     <a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-    <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
     <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-    <a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
   </div>
+  
 </footer>
 
 </body>
