--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div>
 			<div class="works-title-cover">
 				<a href="works_ho.html"><img src="images\art\cover\work_ho.jpg"/>
-				<div class="works-title"><p>Large-scale Environment Design<br/><br/>(WIP)</p></div></a>
+				<div class="works-title"><p>Large-scale Environment Design<br/></p></div></a>
 			</div>
 			<div class="works-title-cover">
 				<a href="works_vg.html"><img src="images\art\cover\work_vg.jpg"/>
